finish post list and fix
